export type Position = {
    row: number;
    col: number;
  };
  