export enum StoneColor {
  BLACK, 
  WHITE, 
  EMPTY, 
}
